# ethsnarks-snasma

./: .gitignore  CMakeLists.txt  Makefile  README.md  circuit.hpp  example_signatures.cpp  main.cpp  make-signatures.py  snasma.hpp  snasma.py  test_snasma.py
